# sample-mcp-server-tos

./: LICENSE  README.md  pyproject.toml
src/: client.py
src/tos_mcp_server/: server.py
src/tos_mcp_server/resources/: tos_resource.py
