[project]
name = "tos-mcp-server"
version = "0.1.0"
description = "TOS MCP server project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
 "tos>=2.8.0",
 "mcp>=1.0.0",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "dinghuazhou"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
tos-mcp-server = "tos_mcp_server:main"
